--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-numpy
-pandas
-nltk
-scikit-learn
-streamlit
-requests
-joblib
+numpy==2.2.1
+pandas==2.2.3
+nltk==3.9.1
+scikit-learn==1.7.0
+streamlit==1.46.1
+requests==2.32.3
+joblib==1.5.1
